# hey-kluky

./: .env-example  .env.example  .gitignore  README.md  end_all.sh  hey_Klooky.tflite  main.py  pyproject.toml  server.py  start-all.sh  start_all.sh  stop-all.sh
.claude/: settings.local.json
hey_kluky/: api.py  config.py  orchestrator.py  settings.py  tts.py  wakeword.py
hey_kluky/classifiers/: __init__.py  llm.py  local.py
hey_kluky/pipeline/: classifier.py  opencode.py  stt.py  timer.py  tts.py
hey_kluky/server/: __init__.py  models.py  processing.py  routes.py  state.py
notebooks/: README.md  train_custom_wakeword.ipynb
opencode-sdk/: index.js  package-lock.json  package.json
wakeword_model/: hey_Klooky.onnx  hey_kluky.tflite
