[project]
name = "hey-kluky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "openwakeword>=0.6.0",
    "pvrecorder>=1.2.7",
    "typer>=0.20.0",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
]
