[project]
name = "hey-kluky"
version = "0.1.0"
description = "Voice-controlled AI assistant for code tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy<2",
    "openwakeword>=0.6.0",
    "pvrecorder>=1.2.7",
    "typer>=0.20.0",
    "pydub>=0.25.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "openai>=1.57.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
hey-kluky = "hey_kluky.wakeword:app"
hey-kluky-server = "hey_kluky.server:run"

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
]
